# AF3_WebServerPullDown

./: .gitignore  README.md  generate_outputs.py  pyproject.toml
automation/: README.md
configs/: job_sets.json
scripts/: fetch_uniprot_cache.py  report_batches.py
src/interaction_job_builder/: biogrid.py  cli.py  config.py  models.py  output_writer.py  payloads.py  pipeline.py  sequences.py  utils.py
templates/: job_template.json  sequence_cache.tsv.example
